fix cursor flicker on navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ html {
 /* animate navbar links with underline */
 .navLink {
   display: block;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .navLink,
@@ -50,6 +50,7 @@ html {
   color: transparent;
   background: white;
   height: 1px;
+  cursor: default;
 }
 
 #navLink-white:after {
@@ -89,16 +90,14 @@ html {
 
 /* hide the scrollbar for the thumbnail slider */
 @layer utilities {
-    @variants responsive {
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
-
-      /* Hide scrollbar for IE, Edge and Firefox */
-      .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-      }
-    }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
